--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,11 @@
----
-version: '3.5'
+version: "3.8"
 services:
   wetty:
-    image: wettyoss/wetty
-    build:
-      context: .
-      dockerfile: containers/wetty/Dockerfile
-    entrypoint: pnpm run docker-compose-entrypoint
-    tty: true
-    working_dir: /usr/src/app
+    image: ghcr.io/butlerx/wetty:latest  # This will pull a pre-built image
     ports:
-      - '3000:3000'
+      - "3000:3000"
     environment:
-      SSHHOST: 'wetty-ssh'
-      SSHPORT: 22
-      NODE_ENV: 'development'
-
-  web:
-    image: nginx
-    volumes:
-      - ./conf/nginx.template:/etc/nginx/conf.d/wetty.template
-    ports:
-      - '80:80'
-    environment:
-      - NGINX_DOMAIN=wetty.com
-      - NGINX_PORT=80
-      - WETTY_HOST=wetty
-      - WETTY_PORT=3000
-    command: >-
-      /bin/bash -c "envsubst
-      '$${NGINX_DOMAIN},$${NGINX_PORT},$${WETTY_HOST},$${WETTY_PORT}' <
-      /etc/nginx/conf.d/wetty.template > /etc/nginx/conf.d/default.conf && nginx
-      -g 'daemon off;'"
-
-  wetty-ssh:
-    build:
-      context: .
-      dockerfile: containers/ssh/Dockerfile
-    image: wettyoss/wetty:ssh
-
-networks:
-  default:
-    name: wetty
+      # Optional: Basic authentication
+      # USERNAME: "your_username"
+      # PASSWORD: "your_password"
+    restart: unless-stopped
